# agent-playground

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_memory_retrieval_feedback_fields.py  0003_session_summaries.py  0004_memory_and_summary_layers.py
app/: main.py
app/agent/: runner.py
app/api/: routes.py
app/core/: config.py
app/db/: models.py  session.py
app/memory/: service.py
app/models/: adapters.py  factory.py
app/schemas/: api.py
app/services/: chat.py  model_observability.py  session_summary.py
app/tools/: builtin.py  registry.py
app/tui/: client.py  main.py  widgets.py
app/tui/screens/: chat_lab.py  dashboard.py  memory_lab.py  run_trace.py  tools_lab.py  validation_lab.py
docs/: 01-agent-loop.md  02-tool-system.md  03-memory-system.md  04-trace-observability.md  05-tui-guide.md  06-claude-adapter.md  07-add-custom-tool.md  08-testing-and-docker.md  learning-path.md  tui-guide.md
docs/labs/: 01-tool-call.md  02-context-and-summary.md  03-memory.md  04-failures.md
docs/tutorials/: 01-watch-tool-call.md  02-memory-roundtrip.md  03-validation-lab.md
sandbox/notes/: demo.md
tests/: conftest.py  test_agent_runner.py  test_api.py  test_claude_adapter.py  test_dashboard.py  test_db_init.py  test_memory.py  test_model_factory.py  test_session_summary.py  test_tools.py  test_tui_client.py  test_tui_screens.py
