[project]
name = "agent-playground"
version = "0.1.0"
description = "A learn-first FastAPI AI Agent playground for backend developers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.74.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "openai>=2.11.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "textual>=6.6.0",
    "uvicorn[standard]>=0.32.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP042"]
